apps/docs/content/docs/v0.7.3/configuration/plugin-options.mdx
---
title: Plugin Options
description: Detailed documentation of all available plugin configuration options
icon: Settings
---

# Plugin Options ⚙️

Better Auth provides extensive configuration options to customize its behavior. This guide covers all available options and their usage.

## Basic Structure 📋

The plugin accepts a configuration object with the following structure:

```ts
betterAuthPlugin({
  betterAuth: {
    // Better Auth core options
  },
  betterAuthPlugins: {
    // Plugin-specific options
  },
  extendsCollections: {
    // Collection extensions
  },
  logs: 'info' // Logging level
})
```

## Better Auth Options 🔧

The `betterAuth` option allows you to configure core Better Auth settings:

```ts
betterAuth: {
  // Session configuration
  session: {
    maxAge: 30 * 24 * 60 * 60, // Session duration in seconds
    secure: process.env.NODE_ENV === 'production', // Use secure cookies in production
  },
  // Security settings
  security: {
    rateLimit: {
      max: 5, // Maximum attempts
      windowMs: 15 * 60 * 1000, // 15 minutes
    },
  },
}
```

{/* ## Plugin Configuration 🎯

The `betterAuthPlugins` option allows you to enable and configure specific plugins:

### Two-Factor Authentication 🔐

```ts
twoFactor: {
  issuer: 'Your App Name', // TOTP issuer name
  window: 1, // TOTP window size
  // Additional TOTP settings
}
```

### Admin Plugin 👨‍💼

```ts
admin: {
  roles: ['user', 'admin'], // Default roles
  permissions: {
    // Custom permissions
    payloadcms: ['read', 'write'],
    byRole: ['admin', 'user'],
  },
}
```

### OpenAPI 📄

```ts
openAPI: {
  enabled: true, // Enable OpenAPI documentation
  path: '/api-docs', // Documentation path
}
```

## Next.js Helpers 🛠️

Better Auth provides a set of pre-built helpers for Next.js applications through the `createAuthLayer` function. These helpers make it easy to implement authentication checks and guards in your Next.js routes and components.

### Setup 🔧

First, create an auth layer in your Next.js project:

```ts
// lib/auth.ts
import { createAuthLayer } from '@payload-better-auth/nextjs'
import { config } from '@/payload.config'

export const { auth, isAuth, isGuest, isUser, isAdmin, isRole, guardAuth } = createAuthLayer(
  config,
  {
    // Your plugin options
  }
)
```

### Checkers ✅

Checkers are functions that verify authentication state:

```ts
// Check if user is authenticated
const isAuthenticated = await isAuth()

// Check if user is a guest (not authenticated)
const isGuestUser = await isGuest()

// Check if user is logged in
const isLoggedIn = await isUser()

// Check if user is an admin
const isAdminUser = await isAdmin()

// Check if user has specific role
const hasRole = await isRole({ role: 'editor' })
```

### Guards 🛡️

Guards protect your routes and components:

```ts
// In your Next.js API route
import { guardAuth } from '@/lib/auth'

export default async function handler(req, res) {
  try {
    await guardAuth(req)
    // Protected route logic
    res.status(200).json({ message: 'Protected content' })
  } catch (error) {
    res.status(401).json({ error: 'Unauthorized' })
  }
}
```

### Usage Examples 📝

#### API Routes

```ts
// pages/api/protected.ts
import { guardAuth } from '@/lib/auth'

export default async function handler(req, res) {
  try {
    await guardAuth(req)
    // Your protected API logic
    res.status(200).json({ data: 'Protected data' })
  } catch (error) {
    res.status(401).json({ error: 'Unauthorized' })
  }
}
```

#### Server Components

```tsx
// app/protected/page.tsx
import { isAdmin } from '@/lib/auth'

export default async function ProtectedPage() {
  const isAdminUser = await isAdmin()

  if (!isAdminUser) {
    return <div>Access denied</div>
  }

  return <div>Admin content</div>
}
```

#### Middleware

```ts
// middleware.ts
import { guardAuth } from '@/lib/auth'

export async function middleware(request) {
  try {
    await guardAuth(request)
    return NextResponse.next()
  } catch (error) {
    return NextResponse.redirect(new URL('/login', request.url))
  }
}
``` */}

## Collection Extensions 📦

The `extendsCollections`